apps/keycloak/components/istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - keycloak
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /metrics
      route:
        - destination:
            host: nonexistent.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak
            port:
              number: 80
